refactor: FileString 변환방법 수정